--- a/MainWindowView.xaml
+++ b/MainWindowView.xaml
@@ -24,11 +24,8 @@
 
         <Label Grid.Column="0" Grid.Row="0" Content="Choose what you want to download:" Margin="0,10,0,0" />
         <ComboBox Grid.Column="0" Grid.Row="1" Margin="5" ItemsSource="{Binding Path=DownloadOptions}"
-                  DisplayMemberPath="Name"
-                  SelectedValuePath="Name"
-                  SelectedValue="{Binding Path=DownloadOption, UpdateSourceTrigger=PropertyChanged, Mode=OneWayToSource}"
-                  IsSynchronizedWithCurrentItem="True"
-                  SelectedIndex="0" />
+                  SelectedValue="{Binding SelectedDownloadOption, UpdateSourceTrigger=PropertyChanged, Mode=OneWayToSource}"
+                  IsSynchronizedWithCurrentItem="True"/>
 
         <Label Grid.Column="0" Grid.Row="2" Content="Select download folder:" Margin="0,10,0,0" />
         <TextBox Grid.Column="0" Grid.Row="3" Margin="5" Text="{Binding DownloadFolderPath}" IsReadOnly="True" 
