--- a/MainWindowView.xaml
+++ b/MainWindowView.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:YoutubeDownloader"
         mc:Ignorable="d"
-        Title="MainWindow" Height="360" Width="600">
+        Title="MainWindow" Height="500" Width="600">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -20,6 +20,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
         <Label Grid.Column="0" Grid.Row="0" Content="Choose what you want to download:" Margin="0,10,0,0" />
@@ -49,5 +50,10 @@
                 Content="Show Downloaded Items"
                 Margin="10" Command="{Binding OpenDownloadFolderButtonClick}" 
                 IsEnabled="{Binding IsOpenDownloadFolderButtonEnabled}" />
+
+        <TextBox Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="8" Text="{Binding DownloadLog}"
+                 Margin="10" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                 ScrollViewer.VerticalScrollBarVisibility="Auto"
+                 IsReadOnly="True" TextWrapping="Wrap" />
     </Grid>
 </Window>
