--- a/MainWindowView.xaml
+++ b/MainWindowView.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:YoutubeDownloader"
-        mc:Ignorable="d"
+        mc:Ignorable="d" Icon="Images/icon.png"
         Title="MainWindow" Height="500" Width="600">
     <Grid>
         <Grid.ColumnDefinitions>
