--- a/YoutubeDownloaderSetup/Product.wxs
+++ b/YoutubeDownloaderSetup/Product.wxs
@@ -28,6 +28,9 @@
         <MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." AllowSameVersionUpgrades="yes" />
         <MediaTemplate />
 
+        <Property Id="ARPPRODUCTICON" Value="APPICON" />
+        <Icon Id="APPICON" SourceFile="..\Images\icon32.ico" />
+
         <Feature Id="ProductFeature" Title="[ProductName]" Level="1">
             <ComponentGroupRef Id="ProductComponents" />
         </Feature>
