Added the proper application icon and the installation shortcuts. Made various small fixes.

--- a/YoutubeDownloaderInstaller/Bundle.wxs
+++ b/YoutubeDownloaderInstaller/Bundle.wxs
@@ -22,7 +22,7 @@
             Version="$(var.ProductVersion)"
             Manufacturer="$(var.Manufacturer)"
             UpgradeCode="$(var.UpgradeCode)"
-            IconSourceFile="..\Images\icon32.ico">
+            IconSourceFile="..\Images\icon.ico">
 
         <BootstrapperApplicationRef Id="WixStandardBootstrapperApplication.HyperlinkLicense">
             <bal:WixStandardBootstrapperApplication
