--- a/YoutubeDownloaderSetup/Product.wxs
+++ b/YoutubeDownloaderSetup/Product.wxs
@@ -83,6 +83,8 @@
                       Source="$(var.YoutubeDownloader.TargetDir)Syroot.KnownFolders.dll" />
                 <File Name="System.Security.Principal.Windows.dll" Id="System.Security.Principal.Windows.dll"
                       Source="$(var.YoutubeDownloader.TargetDir)System.Security.Principal.Windows.dll" />
+                <File Name="Newtonsoft.Json.dll" Id="Newtonsoft.Json.dll"
+                      Source="$(var.YoutubeDownloader.TargetDir)Newtonsoft.Json.dll" />
                 <RemoveFolder Id='INSTALLFOLDER' On='uninstall' />
             </Component>
             <Component Id="FfmpegComponent" Directory="FFMPEGFOLDER" Guid="{C9264541-31EB-4A49-A9C1-1313D83645C9}">
