--- a/MainWindowView.xaml
+++ b/MainWindowView.xaml
@@ -50,7 +50,8 @@
                    Margin="0,10,0,0" />
             <TextBox Grid.Column="0" Grid.Row="5" Margin="5"
                      Text="{Binding YouTubeLink, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                     TextChanged="YouTubeLink_OnTextChanged"
+                     TextChanged="YouTubeLink_OnTextChanged" MouseDoubleClick="YouTubeLink_OnMouseDoubleClick"
+                     GotKeyboardFocus="YouTubeLink_OnGotKeyboardFocus" PreviewMouseLeftButtonDown="YouTubeLink_OnPreviewMouseLeftButtonDown"
                      DataObject.Pasting="YouTubeLink_OnPasting" />
             <Button Grid.Column="1" Grid.Row="5" Width="100" HorizontalAlignment="Left"
                     Content="{x:Static properties:Resources.ClearButtonText}" Margin="5"
