--- a/MainWindowView.xaml
+++ b/MainWindowView.xaml
@@ -40,9 +40,8 @@
 
             <Label Grid.Column="0" Grid.Row="2" Content="{x:Static properties:Resources.DownloadFolderCaption}"
                    Margin="0,10,0,0" />
-            <ComboBox Grid.Column="0" Grid.Row="3" Margin="5" ItemsSource="{Binding Path=DownloadFolders}"
-                      SelectedValue="{Binding SelectedDownloadFolder, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
-                      IsReadOnly="True" IsEditable="True" />
+            <TextBox Grid.Column="0" Grid.Row="3" Margin="5" Text="{Binding DownloadFolderPath}" IsReadOnly="True"
+                     TextChanged="DownloadFolderPath_OnTextChanged" />
             <Button Grid.Column="1" Grid.Row="3" Width="100" HorizontalAlignment="Left"
                     Content="{x:Static properties:Resources.BrowseButtonText}" Margin="5"
                     Click="BrowseButton_OnClick" />
