--- a/MediaDownloader/MainWindowView.xaml
+++ b/MediaDownloader/MainWindowView.xaml
@@ -40,8 +40,8 @@
 
             <Label Grid.Column="0" Grid.Row="2" Content="{x:Static properties:Resources.DownloadFolderCaption}"
                    Margin="0,10,0,0" />
-            <ComboBox Grid.Column="0" Grid.Row="3" Margin="5" ItemsSource="{Binding Path=DownloadFolders}"
-                      SelectedValue="{Binding SelectedDownloadFolder, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
+            <ComboBox Grid.Column="0" Grid.Row="3" Margin="5" ItemsSource="{Binding Path=DownloadFolders.View}"
+                      SelectedValue="{Binding SelectedDownloadFolder, Mode=OneWayToSource}"
                       IsReadOnly="True" IsEditable="True" />
             <Button Grid.Column="1" Grid.Row="3" Width="100" HorizontalAlignment="Left"
                     Content="{x:Static properties:Resources.BrowseButtonText}" Margin="5"
