--- a/MediaDownloader/MainWindowView.xaml
+++ b/MediaDownloader/MainWindowView.xaml
@@ -52,29 +52,52 @@
             <TextBox Grid.Column="0" Grid.Row="5" Margin="5"
                      Text="{Binding YouTubeLink, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                      TextChanged="YouTubeLink_OnTextChanged" MouseDoubleClick="YouTubeLink_OnMouseDoubleClick"
-                     GotKeyboardFocus="YouTubeLink_OnGotKeyboardFocus" PreviewMouseLeftButtonDown="YouTubeLink_OnPreviewMouseLeftButtonDown"
+                     GotKeyboardFocus="YouTubeLink_OnGotKeyboardFocus"
+                     PreviewMouseLeftButtonDown="YouTubeLink_OnPreviewMouseLeftButtonDown"
                      DataObject.Pasting="YouTubeLink_OnPasting" />
             <Button Grid.Column="1" Grid.Row="5" Width="100" HorizontalAlignment="Left"
                     Content="{x:Static properties:Resources.ClearButtonText}" Margin="5"
                     Command="{Binding ClearButtonClick}" />
         </Grid>
 
-        <Button Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Width="200" Height="50" HorizontalAlignment="Center"
-                Margin="10" Command="{Binding DownloadButtonClick}" IsEnabled="{Binding IsDownloadButtonEnabled}"
-                Content="{Binding DownloadButtonText}" />
+        <Grid Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50" />
+            </Grid.RowDefinitions>
+            <Button Grid.Column="0" Grid.Row="0" Margin="5"
+                    Command="{Binding DownloadButtonClick}" IsEnabled="{Binding IsDownloadButtonEnabled}">
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="{Binding DownloadButtonIcon}" Height="24" Width="24" Margin="0,0,5,0" />
+                    <TextBlock Text="{Binding DownloadButtonText}" VerticalAlignment="Center" />
+                </StackPanel>
+            </Button>
+            <Button Grid.Column="1" Grid.Row="0" Margin="5"
+                    Command="{Binding ShowDownloadedItemsButtonClick}"
+                    IsEnabled="{Binding ShowDownloadedItemsButtonIsEnabled}"
+                    Visibility="{Binding ShowDownloadedItemsButtonVisibility}">
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="Images/icon_show.png" Height="24" Width="24" Margin="0,0,5,0" />
+                    <TextBlock Text="{x:Static properties:Resources.ShowDownloadedItemsButtonText}"
+                               VerticalAlignment="Center" />
+                </StackPanel>
+            </Button>
+        </Grid>
 
-        <Grid Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" Height="30" HorizontalAlignment="Stretch"
+        <Grid Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" HorizontalAlignment="Stretch"
               Margin="5">
-            <Button
-                HorizontalAlignment="Center" Padding="5,0,5,0"
-                Content="{x:Static properties:Resources.ShowDownloadedItemsButtonText}"
-                Command="{Binding OpenDownloadFolderButtonClick}"
-                IsEnabled="{Binding IsOpenDownloadFolderButtonEnabled}"
-                Visibility="{Binding ShowDownloadedItemsButtonVisibility}" />
-            <ProgressBar IsIndeterminate="{Binding IsDownloadProgressIndeterminate}"
-                         Visibility="{Binding DownloadProgressVisibility}"
-                         Minimum="{Binding DownloadProgressMin}" Maximum="{Binding DownloadProgressMax}"
-                         Value="{Binding DownloadProgressValue}" />
+            <Grid.RowDefinitions>
+                <RowDefinition Height="27" />
+            </Grid.RowDefinitions>
+            <ProgressBar
+                Foreground="{Binding DownloadProgressColor}"
+                IsIndeterminate="{Binding DownloadProgressIsIndeterminate}"
+                Visibility="{Binding DownloadProgressVisibility}"
+                Minimum="{Binding DownloadProgressMin}" Maximum="{Binding DownloadProgressMax}"
+                Value="{Binding DownloadProgressValue}" />
             <Grid Margin="20,0,20,0" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
